production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: michaeldavidvinc/node-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  selector:
    app: test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  labels:
    name: test-app-ingress
spec:
  rules:
  - host: test.michaeldavidvinc.my.id
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: test-app-service
            port: 
              number: 80
